fix: Finally remove the scrollbar again. No need to fix the header padding now.

--- a/apps/www/app/styles/tailwind.css
+++ b/apps/www/app/styles/tailwind.css
@@ -168,4 +168,12 @@
   ::file-selector-button {
     border-color: var(--color-gray-6, currentColor);
   }
+
+  html {
+    scrollbar-width: 0;
+  }
+
+  body::-webkit-scrollbar {
+    display: none;
+  }
 }
